--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sendgrid/mail": "^7.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.23.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
     "mongoose": "^5.9.15",
+    "multer": "^1.4.2",
     "redis": "^3.0.2"
   },
   "devDependencies": {
