--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.26.0",
     "mongoose": "^5.9.15",
     "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "redis": "^3.0.2"
   },
   "devDependencies": {
