--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "express": "^4.17.1",
     "express-validation": "^3.0.5",
     "helmet": "^3.22.0",
-    "iyasunday": "^1.0.54",
-    "joi": "^17.2.0",
+    "iyasunday": "^1.0.71",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
     "mongoose": "^5.9.15",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "socket.io": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
