--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^5.9.15",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "socket.io": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
